--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav class="navbar navbar-expand-lg navbar-light my-navbar" >
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#"> <img src="Imagens/logo.png" alt="logo" width="30" height="30" class="d-inline-block align-text-top">
-                    Apredizagem</a>
+                    Aprendizagem</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
