--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light my-navbar" >
+            <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#"> <img src="Imagens/logo.png" alt="logo" width="30" height="30" class="d-inline-block align-text-top">
                     Aprendizagem</a>
